[package]
name = "enmap-core"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "Core library for enmap"
repository = "https://github.com/shellrow/enmap"
readme = "README.md"
keywords = ["network","security","scan","cross-platform"]
categories = ["network-programming"]
license = "MIT"

[lib]
name = "enmap_core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
default-net = "0.14.1"
netscan = { version = "0.13.0", features = ["full"] }
domainscan = "0.1.0"
tracert = "0.4.1"
ipnet = "2.5.0"
regex = "1.6.0"
chrono = "0.4"
sudo = "0.6"
dns-lookup = "1.0"
native-tls = "0.2"
async-io = "1.7.0"
tokio = "1.0"
pnet_packet = "0.31.0"
pnet_datalink = "0.31.0"
reqwest = "0.11"
rusqlite = { version = "0.28.0", features = ["bundled"] }
uuid = {version = "1.3.0", features = ["v4","fast-rng","macro-diagnostics"]}

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["std","handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"] }
