[package]
name = "rushmap-core"
version = "0.5.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
repository = "https://github.com/shellrow/rushmap"
readme = "README.md"
license = "MIT"
description = "Core library for rushmap(rmap) and rushmap-desktop"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
default-net = "0.17"
netscan = { version = "0.19", features = ["full"] }
tracert = "0.7"
domainscan = "0.2"
privilege = "0.3"
trust-dns-resolver = "0.22.0"
chrono = "0.4"
uuid = {version = "1.3", features = ["v4","v5","fast-rng","macro-diagnostics"] }
regex = "1.6"
futures = {version = "0.3.21", features = ["executor", "thread-pool"]}
ipnet = "2.5.0"
tokio = "1.0"
async-io = "1.13.0"
cross-socket = "0.5"
