[package]
name = "rushmap-core"
version = "0.8.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
repository = "https://github.com/shellrow/rushmap"
documentation = "https://github.com/shellrow/rushmap"
readme = "README.md"
license = "MIT"
description = "Core library for rushmap(rmap) and rushmap-desktop"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
default-net = { version = "0.21", features = ["serde"] }
xenet = { version = "0.4", features = ["serde"] }
netscan = { version = "0.26", features = ["full"] }
netprobe = { version = "0.4", features = ["serde", "async"] }
domainscan = "0.3"
privilege = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4","v5","fast-rng","macro-diagnostics"] }
regex = "1.6"
futures = {version = "0.3", features = ["executor", "thread-pool"]}
ipnet = "2.5"
hickory-resolver = { version = "0.24" }
tokio = { version = "1.21"}
async-io = "1.13"
bincode = "1.3"
