[package]
name = "nerum-core"
version = "1.0.0"
edition = "2021"
authors = ["shellrow <shellrow@foctet.com>"]
repository = "https://github.com/shellrow/nerum"
documentation = "https://github.com/shellrow/nerum"
readme = "README.md"
license = "MIT"
description = "Core library for nerum"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
netdev = { version = "0.24", features = ["serde"] }
nex = { version = "0.7", features = ["serde"] }
privilege = "0.3"
async-io = "2.3"
futures-lite = "2.2"
futures = {version = "0.3", features = ["executor", "thread-pool"]}
tokio = { version = "1" }
hickory-resolver = { version = "0.24" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4","v5","fast-rng","macro-diagnostics"] }
bincode = "1.3"
phf = { version = "0.11", features = ["macros"] }
rand = "0.8"

[target.'cfg(windows)'.dependencies]
nex-npcap-helper = { version = "0.7" }
inquire = "0.6"
home = "0.5"

[dev-dependencies]
ipnet = "2.7"
dns-lookup = "2.0"
