[package]
name = "nerum"
version = "1.1.0"
edition = "2021"
authors = ["shellrow <shellrow@foctet.com>"]
repository = "https://github.com/shellrow/nerum"
documentation = "https://github.com/shellrow/nerum"
readme = "../README.md"
license = "MIT"
description = "Simple and Fast Network Mapper."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nerum-core = { path = "../nerum-core", version = "1.1.0"}
netdev = { version = "0.26", features = ["serde"] }
clap = { version = "4.4", features = ["cargo"] }
indicatif = "0.16"
inquire = "0.6"
term-table = "1.3.2"
tokio = { version = "1" }
ipnet = "2.7"
