[package]
name = "rushmap"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "High-performance Network Mapper for discovery and management"
repository = "https://github.com/shellrow/rushmap"
readme = "README.md"
keywords = ["network","security","scan","cli","cross-platform"]
categories = ["network-programming"]
license = "MIT"

[[bin]]
name = "rmap"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1", features = ["cargo"] }
indicatif = "0.16.2"
term-table = "1.3.2"
async-io = "1.13.0"
futures = {version = "0.3.21", features = ["executor", "thread-pool"]}
regex = "1.6.0"
ipnet = "2.5.0"
rushmap-core = { path = "../core", version = "0.1.0"}
