[package]
name = "rushmap"
version = "0.8.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "High-performance Network Mapper for discovery and management"
repository = "https://github.com/shellrow/rushmap"
documentation = "https://github.com/shellrow/rushmap"
readme = "README.md"
keywords = ["network","security","scan","cli","cross-platform"]
categories = ["network-programming"]
license = "MIT"

[[bin]]
name = "rmap"
path = "src/main.rs"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
name = "rmap"
authors = ["shellrow <shellrow@protonmail.com>"]
identifier = "com.intsigma.rushmap"
version = "0.8.0"
license_file = "LICENSE"
category = "Developer Tool"
copyright = "Copyright (c) shellrow 2023. All rights reserved."
description = "High-performance Network Mapper for discovery and management"
long_description = "The Simple and High-Performance Network Mapper. Optimized for efficient network discovery and management."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1", features = ["cargo"] }
indicatif = "0.16.2"
term-table = "1.3.2"
async-io = "1.13.0"
futures = {version = "0.3.21", features = ["executor", "thread-pool"]}
regex = "1.6.0"
ipnet = "2.5.0"
rand = "0.8"
xenet = { version = "0.4", features = ["serde"] }
rushmap-core = { path = "../core", version = "0.8.0"}
