[package]
name = "nesmap-desktop"
version = "0.1.0"
description = "Cross-platform network mapper"
authors = ["shellrow <shellrow@protonmail.com>"]
license = "MIT"
repository = "https://github.com/shellrow/nesmap"
default-run = "nesmap-desktop"
edition = "2021"
rust-version = "1.57"
keywords = ["network","security","scan","gui","cross-platform"]
categories = ["network-programming"]

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
async-io = "1.6"
default-net = "0.14.1"
sudo = "0.6"
runas = "1.0.0"
regex = "1.6.0"
dns-lookup = "1.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
uuid = {version = "1.3.0", features = ["v4","fast-rng","macro-diagnostics"] }
ipnet = "2.5.0"
pnet_packet = "0.31.0"
pnet_datalink = "0.31.0"
netscan = { version = "0.13.0", features = ["full"] }
domainscan = "0.2.0"
tracert = "0.4.1"
tokio = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["std","handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
