[package]
name = "enmap"
version = "0.2.0"
description = "The Simple and High-Performance GUI Network Mapper for discovery and management."
authors = ["shellrow <shellrow@protonmail.com>"]
license = "MIT"
repository = "https://github.com/shellrow/enmap"
default-run = "enmap"
edition = "2021"
rust-version = "1.57"
keywords = ["network", "security", "scan", "gui", "cross-platform"]
categories = ["network-programming"]

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["api-all"] }
async-io = "1.13.0"
default-net = "0.16"
privilege = "0.2.0"
regex = "1.6.0"
trust-dns-resolver = "0.22.0"
futures = {version = "0.3.21", features = ["executor", "thread-pool"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
uuid = {version = "1.3.0", features = ["v4", "v5", "fast-rng", "macro-diagnostics"] }
ipnet = "2.5.0"
pnet_packet = "0.33.0"
pnet_datalink = "0.33.0"
netscan = { version = "0.15", features = ["full"] }
domainscan = "0.2.0"
tracert = "0.5"
tokio = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
