[package]
name = "enmap-desktop"
version = "0.1.0"
description = "Cross-platform network mapper"
authors = ["shellrow <shellrow@protonmail.com>"]
license = "MIT"
repository = "https://github.com/shellrow/enmap"
default-run = "enmap-desktop"
edition = "2021"
rust-version = "1.57"
keywords = ["network","security","scan","gui","cross-platform"]
categories = ["network-programming"]

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
async-io = "1.6"
default-net = "0.14.1"
enmap-core = { path = "../../core", version = "0.1.0"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
